customizing the detail view controller static cells

--- a/Contacts/Base.lproj/Main.storyboard
+++ b/Contacts/Base.lproj/Main.storyboard
@@ -196,21 +196,39 @@
                             </tableViewSection>
                             <tableViewSection id="VvF-Ta-1m7">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="ZQv-nQ-aif">
-                                        <rect key="frame" x="0.0" y="324" width="375" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="88" id="ZQv-nQ-aif">
+                                        <rect key="frame" x="0.0" y="324" width="375" height="88"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ZQv-nQ-aif" id="51m-FF-iGp">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="88"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Street" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6iC-pe-NV1">
-                                                    <rect key="frame" x="16" y="12" width="46.5" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6iC-pe-NV1">
+                                                    <rect key="frame" x="16" y="16" width="63" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Some Street" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D8C-wo-4cj">
-                                                    <rect key="frame" x="272" y="12" width="95" height="21"/>
+                                                    <rect key="frame" x="272" y="16" width="95" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Some City" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jIe-Z8-kRK">
+                                                    <rect key="frame" x="200.5" y="45" width="79" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="AA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gwj-y5-gew">
+                                                    <rect key="frame" x="287.5" y="45" width="22.5" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12345" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bHc-S1-iYY">
+                                                    <rect key="frame" x="318" y="45" width="48.5" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -218,93 +236,15 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="D8C-wo-4cj" firstAttribute="trailing" secondItem="51m-FF-iGp" secondAttribute="trailingMargin" id="4RA-cf-hnB"/>
+                                                <constraint firstItem="jIe-Z8-kRK" firstAttribute="top" secondItem="gwj-y5-gew" secondAttribute="top" id="6ta-Pl-Rge"/>
                                                 <constraint firstItem="6iC-pe-NV1" firstAttribute="leading" secondItem="51m-FF-iGp" secondAttribute="leadingMargin" constant="8" id="8JT-6W-fKk"/>
-                                                <constraint firstItem="6iC-pe-NV1" firstAttribute="centerY" secondItem="51m-FF-iGp" secondAttribute="centerY" id="r7j-4j-a9q"/>
-                                                <constraint firstItem="D8C-wo-4cj" firstAttribute="centerY" secondItem="51m-FF-iGp" secondAttribute="centerY" id="tTp-jy-8MW"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="1GT-TA-lUf">
-                                        <rect key="frame" x="0.0" y="368" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1GT-TA-lUf" id="PFB-qC-N5w">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v9H-pC-D09">
-                                                    <rect key="frame" x="16" y="12" width="30.5" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Some City" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jIe-Z8-kRK">
-                                                    <rect key="frame" x="288" y="11" width="79" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="v9H-pC-D09" firstAttribute="leading" secondItem="PFB-qC-N5w" secondAttribute="leadingMargin" constant="8" id="2kJ-2s-aPA"/>
-                                                <constraint firstItem="jIe-Z8-kRK" firstAttribute="trailing" secondItem="PFB-qC-N5w" secondAttribute="trailingMargin" id="6J0-1R-cks"/>
-                                                <constraint firstItem="v9H-pC-D09" firstAttribute="centerY" secondItem="PFB-qC-N5w" secondAttribute="centerY" id="QUb-cu-yYd"/>
-                                                <constraint firstItem="jIe-Z8-kRK" firstAttribute="centerY" secondItem="PFB-qC-N5w" secondAttribute="centerY" id="YrZ-Jm-wMj"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="bpT-r8-BVH">
-                                        <rect key="frame" x="0.0" y="412" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bpT-r8-BVH" id="9at-65-IB7">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="State" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5By-fN-2gN">
-                                                    <rect key="frame" x="16" y="12" width="40.5" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Some State" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gwj-y5-gew">
-                                                    <rect key="frame" x="278" y="11" width="89" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="gwj-y5-gew" firstAttribute="trailing" secondItem="9at-65-IB7" secondAttribute="trailingMargin" id="C9N-Kc-N0g"/>
-                                                <constraint firstItem="gwj-y5-gew" firstAttribute="centerY" secondItem="9at-65-IB7" secondAttribute="centerY" id="Clb-ah-3gP"/>
-                                                <constraint firstItem="5By-fN-2gN" firstAttribute="leading" secondItem="9at-65-IB7" secondAttribute="leadingMargin" constant="8" id="ytN-Me-rFM"/>
-                                                <constraint firstItem="5By-fN-2gN" firstAttribute="centerY" secondItem="9at-65-IB7" secondAttribute="centerY" id="z0S-Lz-sC0"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="lT0-tt-KZd">
-                                        <rect key="frame" x="0.0" y="456" width="375" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lT0-tt-KZd" id="nUa-Ko-Vkb">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ZIP Code" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2bV-Pa-EgK">
-                                                    <rect key="frame" x="16" y="12" width="71" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Some Zip Code" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bHc-S1-iYY">
-                                                    <rect key="frame" x="248" y="11" width="119" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="bHc-S1-iYY" firstAttribute="centerY" secondItem="nUa-Ko-Vkb" secondAttribute="centerY" id="2HB-Fj-q44"/>
-                                                <constraint firstItem="2bV-Pa-EgK" firstAttribute="leading" secondItem="nUa-Ko-Vkb" secondAttribute="leadingMargin" constant="8" id="FUw-pV-hFJ"/>
-                                                <constraint firstItem="bHc-S1-iYY" firstAttribute="trailing" secondItem="nUa-Ko-Vkb" secondAttribute="trailingMargin" id="iKX-g6-JnH"/>
-                                                <constraint firstItem="2bV-Pa-EgK" firstAttribute="centerY" secondItem="nUa-Ko-Vkb" secondAttribute="centerY" id="yih-v8-VNe"/>
+                                                <constraint firstItem="D8C-wo-4cj" firstAttribute="top" secondItem="51m-FF-iGp" secondAttribute="topMargin" constant="8" id="DBg-sc-xZI"/>
+                                                <constraint firstItem="bHc-S1-iYY" firstAttribute="trailing" secondItem="D8C-wo-4cj" secondAttribute="trailing" id="Fb6-I9-oEr"/>
+                                                <constraint firstItem="bHc-S1-iYY" firstAttribute="top" secondItem="D8C-wo-4cj" secondAttribute="bottom" constant="8" id="YTp-iC-g2N"/>
+                                                <constraint firstItem="bHc-S1-iYY" firstAttribute="leading" secondItem="gwj-y5-gew" secondAttribute="trailing" constant="8" id="ZbS-P6-HDF"/>
+                                                <constraint firstItem="gwj-y5-gew" firstAttribute="top" secondItem="bHc-S1-iYY" secondAttribute="top" id="cOV-X2-04v"/>
+                                                <constraint firstItem="gwj-y5-gew" firstAttribute="leading" secondItem="jIe-Z8-kRK" secondAttribute="trailing" constant="8" id="n4w-sg-tjs"/>
+                                                <constraint firstItem="6iC-pe-NV1" firstAttribute="top" secondItem="51m-FF-iGp" secondAttribute="topMargin" constant="8" id="p9v-tb-XT5"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -330,7 +270,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KOy-oW-0T9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="725" y="121"/>
+            <point key="canvasLocation" x="724" y="120.98950524737631"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
