--- a/Contacts/Base.lproj/Main.storyboard
+++ b/Contacts/Base.lproj/Main.storyboard
@@ -74,7 +74,7 @@
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Star" translatesAutoresizingMaskIntoConstraints="NO" id="wwm-wq-Pls">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wwm-wq-Pls">
                                             <rect key="frame" x="345" y="28" width="22" height="22"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="22" id="VfD-ti-1wa"/>
@@ -331,9 +331,6 @@
             <point key="canvasLocation" x="724" y="120.98950524737631"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="Star" width="514" height="490"/>
-    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="6S0-TO-JiA"/>
     </inferredMetricsTieBreakers>
